fixed label alignment and overlap issues for vertical slider

--- a/src/sass/lab/_interactive-components.sass
+++ b/src/sass/lab/_interactive-components.sass
@@ -372,17 +372,18 @@
       &.horizontal
         width: 6em
       &.vertical
-        width: 4em
+        width: 1em
       &.horizontal
         margin: 0.2em 0 0 -3em
       &.vertical
-        margin: -0.1em 0 0 -2.5em
+        margin: -0.1em 0 0 -2em
       // Now, make the text itself centered in the .label element
       &.horizontal
         text-align: center
       // Not wanted when in vertical
       &.vertical
-        text-align: left
+        text-align: right
+        direction: rtl
       // And finally, make the position labels a bit smaller than the title and other text
       font-size: 0.8em
 
